--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.4",
-    "morgan": "^1.10.0"
+    "mongoose-sequence": "^6.0.1",
+    "morgan": "^1.10.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
