fix eslint config

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "engines": {
     "node": "18.x"
   },
+  "type": "module",
   "private": true,
   "description": "Template for ExpressJS API with Mongoose for Web and Mobile Engineering (DIT342)",
   "main": "./app.js",
@@ -11,6 +12,7 @@
     "start": "node ./app.js",
     "dev": "nodemon ./app.js",
     "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
     "test": "cross-env-shell MONGODB_URI=mongodb://localhost:27017/serverTestDB \"npm run newman-server\"",
     "ci-test": "npm run newman-server",
     "newman-server": "cross-env-shell PORT=3001 \"npm run dropdb && run-p --race start newman-wait\"",
@@ -23,6 +25,7 @@
     "url": "git+https://gitlab.com/dit342/group-00-web.git"
   },
   "dependencies": {
+    "@eslint/js": "^9.10.0",
     "body-parser": "^1.20.2",
     "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
@@ -33,7 +36,10 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin-js": "^2.8.0",
     "cross-env": "^7.0.3",
+    "eslint": "^9.10.0",
+    "global": "^4.4.0",
     "newman": "^6.2.1",
     "nodemon": "^3.1.4",
     "npm-run-all": "^4.1.5",
