--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ test:
   variables:
     MONGODB_URI: "mongodb://mongo:27017/serverTestDB"
   script:
+    - echo "JWT_SECRET=$JWT_SECRET" > .env
     - cd server
     - npm run ci-test
 
