--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "bootstrap-vue-next": "^0.24.22",
     "unplugin-vue-components": "^0.27.4",
     "vue": "^3.4.38",
-    "vue-router": "^4.4.3"
+    "vue-router": "^4.4.3",
+    "vue-star-rating": "^2.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
