--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "postinstall": "npm install --prefix server && npm install --prefix client && npm run build --prefix client"
   },
-  "engines" : {
-    "npm" : "9.x",
+  "engines": {
+    "npm": "9.x",
     "node": "18.x"
+  },
+  "dependencies": {
+    "axios": "^1.7.7",
+    "vue-star-rating": "^1.7.0"
   }
 }
