--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons-vue": "^1.11.3",
     "bootstrap-vue-next": "^0.24.23",
     "jwt-decode": "^4.0.0",
     "unplugin-vue-components": "^0.27.4",
