--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons-vue": "^1.11.3",
     "bootstrap-vue-next": "^0.24.23",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "unplugin-vue-components": "^0.27.4",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3",
