--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@eslint/js": "^9.10.0",
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "connect-history-api-fallback": "^2.0.0",
